--- a/newone.html
+++ b/newone.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Du an 3</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>du an 3</h1>
-    <h2>su doi 1</h2>
-    <h2>sua  doi lan 2</h2>
+    <h1>new</h1>
 </body>
 </html>
